@@ -5,7 +5,7 @@ export(
 	mosaic.glm, sieve.glm, assoc.glm,
 	modFit, modFit.glm, modFit.loglm,
 	GKgamma,print.GKgamma,
-	glmlist, loglmlist, summarize, 
+	glmlist, loglmlist, summarise, 
 	print.Kappa,
 	mosaic3d, split3d, range3d, center3d,
 	Kway, Crossings, meanResiduals, datasets,
@@ -18,10 +18,10 @@ S3method(assoc, glm)
 S3method(modFit, glm)
 S3method(modFit, loglm)
 
-S3method(summarize, glm)
-S3method(summarize, glmlist)
-S3method(summarize, loglm)
-S3method(summarize, loglmlist)
+S3method(summarise, glm)
+S3method(summarise, glmlist)
+S3method(summarise, loglm)
+S3method(summarise, loglmlist)
 S3method(print, GKgamma)
 S3method(print, Kappa)
 S3method(split3d, shape3d)
